aprendendo a criar TAGS

--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Curso de programação Web">
+    <meta name="keywords" content="HTML, CSS, JavaScript, programação">
+    <meta name="author" content="Filipe Satiro">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Curso de programação Web</title>
 </head>
 <body>
-    
+        <h1>Meu Primeiro Site h1</h1>
+    <strong>
+        <p>A persistência é o caminho <br> para transformar sonhos em realidade.</p>
+    </strong>
+    <h2>Titulo 2 aprendendo sobre tags</h2>
+    <p>Grandes conquistas começam <br> com pequenos passos diários.</p>
+    <hr>
+    <h3>Titulo 3</h3>
+    <p>A vida recompensa quem não <i>desiste de tentar</i>.</p>
+    <h4>Titulo 4</h4>
+    <p>Todo desafio carrega uma oportunidade disfarçada.</p>
+    <h5>Titulo <small>5</small></h5>
+    <p>O sucesso é fruto da ação,<u> não apenas da intenção</u>.</p>
+    <h6><mark>Titulo 6</mark></h6>
+    <p><strong>O aprendizado é o maior aliado do crescimento.</strong></p><hr>
+    <p><b> de <del>497$</del> por 300$</b></p>
+    <p>2<sup>10</sup></p>
+    <p>10<sub>2</sub></p>
 </body>
 </html>
