--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 <body>
         <h1>Meu Primeiro Site h1</h1>
     <strong>
-        <p>A persistência é o caminho <br> para transformar sonhos em realidade.</p>
+        <p><abbr title="persistência em tudo que fazer, todos os dias">A persistência é o caminho </abbr><br> para transformar sonhos em realidade.</p>
     </strong>
     <h2>Titulo 2 aprendendo sobre tags</h2>
     <p>Grandes conquistas começam <br> com pequenos passos diários.</p>
     <hr>
+    <!--Isso é apenas um comentário -->
     <h3>Titulo 3</h3>
     <p>A vida recompensa quem não <i>desiste de tentar</i>.</p>
     <h4>Titulo 4</h4>
@@ -28,5 +29,13 @@
     <p><b> de <del>497$</del> por 300$</b></p>
     <p>2<sup>10</sup></p>
     <p>10<sub>2</sub></p>
-</body>
+    <p><abbr title="world wide web">www</abbr></p><!--esta tag abbr é para citar as abreviações feitas quando passar o mouse em cima do texto-->
+    <p><address>morando em são paulo de novo</address> </p>
+    <p>O filme <cite>Titanic </cite> com leornardo de caprio. Ele disse <q>Rouse salve sua vida</q></p>
+    <p><blockquote> o lula disse que os brasileiros vai comer picanha </blockquote></p>
+    <p><bdo dir="rtl">invertendo um texto com bdo</bdo></p>
+
+    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit magnam nulla vel repudiandae, maxime reiciendis qui deserunt eius aperiam voluptas explicabo velit veniam provident animi, blanditiis molestiae odit sequi saepe.</p> -->
+
+    </body>
 </html>
