aloquei os arquivos dentro da pasta de link e criei a pasta tabelas

--- a/links/sobre.html
+++ b/links/sobre.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filipe</title>
+    <title>Segunda página</title>
 </head>
 <body>
-    <h1>Filipe</h1>
-    <a href="../links/index2.html">voltar</a>
-    
+    <h1>Sobre nós</h1>
+    <p>
+        <a href="index2.html">Voltar a página</a>
+    </p>
 </body>
 </html>
