adicionando a pasta de iframe e modifiquei a pasta link

--- a/links/sobre.html
+++ b/links/sobre.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Sobre nós</h1>
     <p>
-        <a href="index2.html">Voltar a página</a>
+        <a href="index2.html" target="meu-iframe">Voltar a página</a>
     </p>
 </body>
 </html>
