criado a pastinha de formulários, aprendendo um pouco!

--- a/links/index2.html
+++ b/links/index2.html
@@ -35,7 +35,9 @@
     <!--Link e caminho relativo-->
     <a href="../equipe/filipe.html">Filipe</a>
     <hr>
+    <a href="../formularios/forms.html">Formulário</a>
     <!--Link de imagem fora do meu site -->
+    <hr>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQzyt9o9Pi2R2K3ByqdVC9RKIxkoOEpqAHgg&s" 
     width="350" alt="carro">
     <hr>
