criado a pasta de audio local para testar os estudos

--- a/links/index2.html
+++ b/links/index2.html
@@ -28,15 +28,18 @@
 <hr>
     <!--Link Absoluto-->
     <a href="https://google.com"target="_blank"rel="external">Ir para o Google</a>
-    <hr>
+    &nbsp;
     <!--Link Relativo-->
     <a href="sobre.html">Sobre Nós</a>
-    <hr>
+    &nbsp;
     <!--Link e caminho relativo-->
     <a href="../equipe/filipe.html">Filipe</a>
-    <hr>
+    &nbsp;
     <a href="../formularios/forms.html">Formulário</a>
     <!--Link de imagem fora do meu site -->
+    &nbsp;
+    <a href="../audio/audio.html">Audio</a>
+
     <hr>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQzyt9o9Pi2R2K3ByqdVC9RKIxkoOEpqAHgg&s" 
     width="350" alt="carro">
