criado a pasta de video e aprendendo a tag source

--- a/links/index2.html
+++ b/links/index2.html
@@ -39,6 +39,8 @@
     <!--Link de imagem fora do meu site -->
     &nbsp;
     <a href="../audio/audio.html">Audio</a>
+    &nbsp;
+    <a href="../videos/videos.html">Videos</a>
 
     <hr>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQzyt9o9Pi2R2K3ByqdVC9RKIxkoOEpqAHgg&s" 
