aprendendo TAGS e sua semantica e como podemos dar sentido ao conteudo

--- a/links/index2.html
+++ b/links/index2.html
@@ -41,6 +41,8 @@
     <a href="../audio/audio.html">Audio</a>
     &nbsp;
     <a href="../videos/videos.html">Videos</a>
+    &nbsp;
+    <a href="../semantico/div.html">Semântico</a>
 
     <hr>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQzyt9o9Pi2R2K3ByqdVC9RKIxkoOEpqAHgg&s" 
